@@ -2,14 +2,19 @@ package io.dcns.wantitauction.domain.auctionItem.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
 
 import io.dcns.wantitauction.domain.auctionItem.dto.AuctionItemPageableResponseDto;
 import io.dcns.wantitauction.domain.auctionItem.dto.AuctionItemResponseDto;
 import io.dcns.wantitauction.domain.auctionItem.dto.FinishedItemPageableResponseDto;
 import io.dcns.wantitauction.domain.auctionItem.dto.FinishedItemResponseDto;
+import io.dcns.wantitauction.domain.auctionItem.dto.ReadyItemPageableResponseDto;
+import io.dcns.wantitauction.domain.auctionItem.dto.ReadyItemResponseDto;
 import io.dcns.wantitauction.domain.auctionItem.entity.AuctionItem;
 import io.dcns.wantitauction.domain.auctionItem.entity.AuctionItemEnum;
+import io.dcns.wantitauction.domain.auctionItem.entity.CategoryEnum;
 import io.dcns.wantitauction.domain.auctionItem.repository.AuctionItemQueryRepository;
 import io.dcns.wantitauction.domain.auctionItem.repository.AuctionItemRepository;
 import java.time.LocalDateTime;
@@ -48,12 +53,12 @@ class AuctionItemServiceTest {
             //given
             AuctionItem testItem = new AuctionItem(
                 1L, 1L, null, "Test Item",
-                "itemDescription", 100000L, 110000L,
+                "itemDescription", CategoryEnum.WATCH, 100000L, 110000L,
                 LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.READY, null
             );
-            given(auctionItemRepository.findById(1L)).willReturn(Optional.of(testItem));
+            given(auctionItemRepository.findById(anyLong())).willReturn(Optional.of(testItem));
             //when
-            AuctionItemResponseDto responseDto = auctionItemService.getAuctionItem(1L);
+            AuctionItemResponseDto responseDto = auctionItemService.getAuctionItem(anyLong());
             //then
             assertThat(responseDto.getAuctionItemId()).isEqualTo(
                 new AuctionItemResponseDto(testItem).getAuctionItemId());
@@ -63,7 +68,7 @@ class AuctionItemServiceTest {
         @DisplayName("조회 실패")
         void getAuctionItemFail() {
             //given
-            given(auctionItemRepository.findById(2L)).willThrow(
+            given(auctionItemRepository.findById(anyLong())).willThrow(
                 new IllegalArgumentException("존재하지 않는 경매상품 입니다."));
             //when
             //then
@@ -87,14 +92,14 @@ class AuctionItemServiceTest {
             Pageable pageable = PageRequest.of(page, size);
             testItem = new AuctionItem(
                 1L, 1L, null, "Test Item",
-                "itemDescription", 100000L, 110000L,
+                "itemDescription", CategoryEnum.WATCH, 100000L, 110000L,
                 LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.READY, null
             );
             List<AuctionItemResponseDto> auctionItems = List.of(
                 new AuctionItemResponseDto(testItem),
                 new AuctionItemResponseDto(testItem)
             );
-            given(auctionItemQueryRepository.findAll(pageable))
+            given(auctionItemQueryRepository.findAll(any(Pageable.class)))
                 .willReturn(
                     PageableExecutionUtils.getPage(auctionItems, pageable, () -> totalSize)
                 );
@@ -103,7 +108,7 @@ class AuctionItemServiceTest {
                 page, size);
 
             //then
-            assertThat(responseDtoPage.getResponseDtoList().getFirst().getAuctionItemId())
+            assertThat(responseDtoPage.getResponseDtoList().get(0).getAuctionItemId())
                 .isEqualTo(testItem.getAuctionItemId());
         }
     }
@@ -118,10 +123,10 @@ class AuctionItemServiceTest {
             //given
             AuctionItem testItem = new AuctionItem(
                 1L, 1L, null, "Test Item",
-                "itemDescription", 100000L, 110000L,
+                "itemDescription", CategoryEnum.WATCH, 100000L, 110000L,
                 LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.FINISHED, null
             );
-            given(auctionItemQueryRepository.findByIdAndFinished(1L))
+            given(auctionItemQueryRepository.findByIdAndFinished(anyLong()))
                 .willReturn(Optional.of(new FinishedItemResponseDto(testItem)));
             //when
             FinishedItemResponseDto responseDto = auctionItemService.getFinishedAuctionItem(1L);
@@ -134,7 +139,7 @@ class AuctionItemServiceTest {
         @DisplayName("조회 실패")
         void getFinishedAuctionItemFail() {
             //given
-            given(auctionItemQueryRepository.findByIdAndFinished(2L))
+            given(auctionItemQueryRepository.findByIdAndFinished(anyLong()))
                 .willThrow(new IllegalArgumentException("존재하지 않는 상품 ID 입니다."));
             //when
             //then
@@ -145,7 +150,7 @@ class AuctionItemServiceTest {
     }
 
     @Nested
-    @DisplayName("경매 상품 목록 조회")
+    @DisplayName("종료 경매 상품 목록 조회")
     class GetFinishedListTest {
 
         @Test
@@ -158,14 +163,14 @@ class AuctionItemServiceTest {
             Pageable pageable = PageRequest.of(page, size);
             testItem = new AuctionItem(
                 1L, 1L, null, "Test Item",
-                "itemDescription", 100000L, 110000L,
+                "itemDescription", CategoryEnum.WATCH, 100000L, 110000L,
                 LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.FINISHED, null
             );
             List<FinishedItemResponseDto> auctionItems = List.of(
                 new FinishedItemResponseDto(testItem),
                 new FinishedItemResponseDto(testItem)
             );
-            given(auctionItemQueryRepository.findAllByFinished(pageable))
+            given(auctionItemQueryRepository.findAllByFinished(any(Pageable.class)))
                 .willReturn(
                     PageableExecutionUtils.getPage(auctionItems, pageable, () -> totalSize)
                 );
@@ -178,5 +183,77 @@ class AuctionItemServiceTest {
                 .isEqualTo(testItem.getAuctionItemId());
         }
     }
+
+    @Nested
+    @DisplayName("예정 경매 상품 목록 조회")
+    class GetReadyListTest {
+
+        @Test
+        @DisplayName("조회 성공")
+        void getFinishedAuctionItemList() {
+            //given
+            int page = 0;
+            int size = 3;
+            Long totalSize = 1L;
+            Pageable pageable = PageRequest.of(page, size);
+            testItem = new AuctionItem(
+                1L, 1L, null, "Test Item",
+                "itemDescription", CategoryEnum.WATCH, 100000L, 110000L,
+                LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.READY, null
+            );
+            List<ReadyItemResponseDto> auctionItems = List.of(
+                new ReadyItemResponseDto(testItem),
+                new ReadyItemResponseDto(testItem),
+                new ReadyItemResponseDto(testItem)
+            );
+            given(auctionItemQueryRepository.findAllByReady(any(Pageable.class)))
+                .willReturn(
+                    PageableExecutionUtils.getPage(auctionItems, pageable, () -> totalSize)
+                );
+            //when
+            ReadyItemPageableResponseDto responseDtoPage = auctionItemService.getReadyAuctionItems(
+                page, size);
+
+            //then
+            assertThat(responseDtoPage.getResponseDtoList().get(1).getAuctionItemId())
+                .isEqualTo(testItem.getAuctionItemId());
+        }
+    }
+
+//    @Nested
+//    @DisplayName("진행중인 경매 상품 목록 조회")
+//    class GetInProgressListTest {
+//
+//        @Test
+//        @DisplayName("조회 성공")
+//        void getFinishedAuctionItemList() {
+//            //given
+//            int page = 0;
+//            int size = 3;
+//            Long totalSize = 1L;
+//            Pageable pageable = PageRequest.of(page, size);
+//            testItem = new AuctionItem(
+//                1L, 1L, null, "Test Item",
+//                "itemDescription",CategoryEnum.WATCH,100000L, 110000L,
+//                LocalDateTime.now(), LocalDateTime.now(), AuctionItemEnum.IN_PROGRESS, null
+//            );
+//            List<InProgressItemResponseDto> auctionItems = List.of(
+//                new InProgressItemResponseDto(testItem),
+//                new InProgressItemResponseDto(testItem),
+//                new InProgressItemResponseDto(testItem)
+//            );
+//            given(auctionItemQueryRepository.findAllByInProgress(any(Pageable.class)),)
+//                .willReturn(
+//                    PageableExecutionUtils.getPage(auctionItems, pageable, () -> totalSize)
+//                );
+//            //when
+//            InProgressItemPageableResponseDto responseDtoPage = auctionItemService.getInProgressAuctionItems(
+//                page, size, category);
+//
+//            //then
+//            assertThat(responseDtoPage.getResponseDtoList().get(1).getAuctionItemId())
+//                .isEqualTo(testItem.getAuctionItemId());
+//        }
+//    }
 
 }
